compiler/testData/multiplatform/classScopes/missingFunction/output.txt
-- Common --
Exit code: OK
Output:
compiler/testData/multiplatform/classScopes/missingFunction/common.kt:1:1: warning: the expect/actual classes (including interfaces, objects, annotations, enums, actual typealiases) are an experimental feature. You can use -Xexpect-actual-classes flag to suppress this warning.
expect class Foo {
^

-- JVM --
Exit code: COMPILATION_ERROR
Output:
compiler/testData/multiplatform/classScopes/missingFunction/jvm.kt:1:14: error: actual class 'Foo' has no corresponding members for expected class members:

    public final expect fun function(s: String): Unit

actual class Foo
             ^
